--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
   <script>
     window.$docsify = {
-      name: '先会而后背',
+      name: 'Believe oneself',
       repo: 'https://github.com/CodePen9',
       maxLevel: 5,//最大支持渲染的标题层级
       subMaxLevel: 3,
